landing page overflow fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,10 @@
-
+body{
+    opacity: 1;
+    animation: fadein 0.5s linear;
+}
+@keyframes fadein{
+    0%{opacity: 0;}
+    100%{opacity: 1;}
+}
 
 
