--- a/client/src/components/Navbar/topnav.module.css
+++ b/client/src/components/Navbar/topnav.module.css
@@ -2,9 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width:96vw;
+    width:100%;
     height: 7vh;
-    margin-left:4vw;
     background: #F5D6BA;
     position: fixed;
     top: 0;
@@ -19,5 +18,5 @@
 }
 .projname{
     color: #4C191B;
-    margin-left: 2vw;
+    margin-left: 80px;
 }
